Fix <br> with empty space in no-wrap elements

--- a/src/scss/partials/_row.scss
+++ b/src/scss/partials/_row.scss
@@ -39,7 +39,11 @@ $row-border-radius: $border-radius-medium;
     padding-bottom: 0 !important;
 
     br {
-      display: none;
+      content: " ";
+
+      &:after {
+        content: " ";
+      }
     }
   }
 
